loan dataset_project_commit_2

--- a/Projects/Decision_tree_model_for_loan_dataset/main.ipynb
+++ b/Projects/Decision_tree_model_for_loan_dataset/main.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'credit.policy: 1 if the customer meets the credit underwriting criteria of LendingClub.com, and 0 otherwise.\\n\\npurpose: The purpose of the loan (takes values \"credit_card\", \"debt_consolidation\", \"educational\", \"major_purchase\", \"small_business\", and \"all_other\").\\n\\nint.rate: The interest rate of the loan, as a proportion (a rate of 11% would be stored as 0.11). Borrowers judged by LendingClub.com to be more risky are assigned higher interest rates.\\n\\ninstallment: The monthly installments owed by the borrower if the loan is funded.\\n\\nlog.annual.inc: The natural log of the self-reported annual income of the borrower.\\n\\ndti: The debt-to-income ratio of the borrower (amount of debt divided by annual income).\\n\\nfico: The FICO credit score of the borrower.\\n\\ndays.with.cr.line: The number of days the borrower has had a credit line.\\n\\nrevol.bal: The borrower\\'s revolving balance (amount unpaid at the end of the credit card billing cycle).\\n\\nrevol.util: The borrower\\'s revolving line utilization rate (the amount of the credit line used relative to total credit available).\\n\\ninq.last.6mths: The borrower\\'s number of inquiries by creditors in the last 6 months.\\n\\ndelinq.2yrs: The number of times the borrower had been 30+ days past due on a payment in the past 2 years.\\n\\npub.rec: The borrower\\'s number of derogatory public records (bankruptcy filings, tax liens, or judgments).\\n\\nnot.fully.paid: whether or not the borrower paid back their loan in full\\n'"
+       "'credit.policy: \\n    -->> 1 if the customer meets the credit underwriting criteria of LendingClub.com, and 0 otherwise.\\n\\npurpose: The purpose of the loan (takes values \"credit_card\", \"debt_consolidation\", \"educational\", \"major_purchase\", \"small_business\", and \"all_other\").\\n\\nint.rate: The interest rate of the loan, as a proportion (a rate of 11% would be stored as 0.11). Borrowers judged by LendingClub.com to be more risky are assigned higher interest rates.\\n    -->> higher the interest rate that means risk is higher\\n    \\ninstallment: The monthly installments owed by the borrower if the loan is funded.\\n\\nlog.annual.inc: The natural log of the self-reported annual income of the borrower.\\n\\ndti: The debt-to-income ratio of the borrower (amount of debt divided by annual income).\\n\\nfico: The FICO credit score of the borrower.\\n\\ndays.with.cr.line: The number of days the borrower has had a credit line.\\n\\nrevol.bal: The borrower\\'s revolving balance (amount unpaid at the end of the credit card billing cycle).\\n\\nrevol.util: The borrower\\'s revolving line utilization rate (the amount of the credit line used relative to total credit available).\\n\\ninq.last.6mths: The borrower\\'s number of inquiries by creditors in the last 6 months.\\n\\ndelinq.2yrs: The number of times the borrower had been 30+ days past due on a payment in the past 2 years.\\n\\npub.rec: The borrower\\'s number of derogatory public records (bankruptcy filings, tax liens, or judgments).\\n\\nnot.fully.paid: whether or not the borrower paid back their loan in full\\n'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,33 +53,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'list'>\n"
-     ]
-    },
-    {
-     "ename": "Exception",
-     "evalue": "('Error has encountered at function ==>> get_new_column_names', KeyError('credit_policy'))",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[41], line 19\u001b[0m, in \u001b[0;36mget_new_column_names\u001b[1;34m(column_names)\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m column_name_index \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(column_names)):\n\u001b[1;32m---> 19\u001b[0m     column_names[column_name_index] \u001b[38;5;241m=\u001b[39m \u001b[43mcolumns_dict\u001b[49m\u001b[43m[\u001b[49m\u001b[43mcolumn_names\u001b[49m\u001b[43m[\u001b[49m\u001b[43mcolumn_name_index\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstrip\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlower\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m column_names\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'credit_policy'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[41], line 23\u001b[0m\n\u001b[0;32m     21\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m     22\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mError has encountered at function ==>> get_new_column_names\u001b[39m\u001b[38;5;124m\"\u001b[39m, e)\n\u001b[1;32m---> 23\u001b[0m \u001b[43mget_new_column_names\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdataframe\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[41], line 22\u001b[0m, in \u001b[0;36mget_new_column_names\u001b[1;34m(column_names)\u001b[0m\n\u001b[0;32m     20\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m column_names\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m---> 22\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mError has encountered at function ==>> get_new_column_names\u001b[39m\u001b[38;5;124m\"\u001b[39m, e)\n",
-      "\u001b[1;31mException\u001b[0m: ('Error has encountered at function ==>> get_new_column_names', KeyError('credit_policy'))"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Necessary functions\n",
     "def get_new_column_names(column_names):\n",
@@ -109,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -153,27 +129,20 @@
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "['credit_policy',\n",
-       " 'purpose',\n",
-       " 'interest_rate',\n",
-       " 'monthly_installment_of_users',\n",
-       " 'annual_income_in',\n",
-       " 'debt_to_income_ration',\n",
-       " 'fico_credit_score',\n",
-       " 'days_with_cr_line',\n",
-       " 'amount_unpaid_past_billing_cycle',\n",
-       " 'revol_util',\n",
-       " 'creditors_inquery_last_6_months',\n",
-       " 'count_of_late_payment_past_2_years',\n",
-       " 'negative_public_records',\n",
-       " 'paid_fully_or_not']"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "Exception",
+     "evalue": "('Error has encountered at function ==>> get_new_column_names', KeyError('credit_policy'))",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[43], line 20\u001b[0m, in \u001b[0;36mget_new_column_names\u001b[1;34m(column_names)\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m column_name_index \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(column_names)):\n\u001b[1;32m---> 20\u001b[0m     column_names[column_name_index] \u001b[38;5;241m=\u001b[39m \u001b[43mcolumns_dict\u001b[49m\u001b[43m[\u001b[49m\u001b[43mcolumn_names\u001b[49m\u001b[43m[\u001b[49m\u001b[43mcolumn_name_index\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstrip\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlower\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m column_names\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'credit_policy'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[46], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mget_new_column_names\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdataframe\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[43], line 23\u001b[0m, in \u001b[0;36mget_new_column_names\u001b[1;34m(column_names)\u001b[0m\n\u001b[0;32m     21\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m column_names\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m---> 23\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mError has encountered at function ==>> get_new_column_names\u001b[39m\u001b[38;5;124m\"\u001b[39m, e)\n",
+      "\u001b[1;31mException\u001b[0m: ('Error has encountered at function ==>> get_new_column_names', KeyError('credit_policy'))"
+     ]
     }
    ],
    "source": [
